k8s/robco/postgres-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: robco
spec:
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-db
      volumes:
      - name: postgres-db
        persistentVolumeClaim:
          claimName: postgres-db
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: robco
spec:
  ports:
  - port: 5432
  selector:
    app: postgres-db
