k8s/robco/robot-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: robot-service
  name: robot-service
  namespace: robco
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: robot-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: robot-service
    spec:
      containers:
      - image: robco/robot-service:latest
        imagePullPolicy: IfNotPresent
        name: robot-service
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 0.25Gi
        ports:
        - containerPort: 80
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: robot-service
  namespace: robco
spec:
  selector:
    app: robot-service
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-service
  namespace: robco
spec:
  ingressClassName: nginx
  rules:
  - host: robot-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: robot-service
            port:
              number: 8000
